# todo-list

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/database/: DatabaseManager.h
src/gui/: MainWindow.h
src/models/: task.h
